--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -10,11 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="4dp"
-        android:paddingEnd="4dp"
-        android:paddingStart="4dp"
-        android:paddingTop="8dp">
+        android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="wrap_content"
