--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_offset">8dp</dimen>
+    <dimen name="poster_width">50dp</dimen>
+    <dimen name="poster_height">75dp</dimen>
 </resources>
+
+<!-- TODO (7): Add poster width-height dimesions for different screen densities -->
