--- a/app/src/main/res/layout/activity_movies_catalog.xml
+++ b/app/src/main/res/layout/activity_movies_catalog.xml
@@ -3,14 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context="com.mustafakahraman.popularmovies1.MoviesCatalog">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movie_catalog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.mustafakahraman.popularmovies1.MoviesCatalog">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/pb_loading_bar"
