--- a/app/src/main/res/layout/activity_movies_catalog.xml
+++ b/app/src/main/res/layout/activity_movies_catalog.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movie_catalog"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.mustafakahraman.popularmovies1.MoviesCatalog">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent" >
 
-    <ProgressBar
-        android:id="@+id/pb_loading_bar"
-        android:layout_height="42dp"
-        android:layout_width="42dp"
-        android:layout_gravity="center"
-        android:visibility="invisible"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_movie_catalog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.mustafakahraman.popularmovies1.MoviesCatalog">
+        </android.support.v7.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/tv_error_message"
-        android:text="@string/error_message"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:visibility="invisible" />
+        <ProgressBar
+            android:id="@+id/pb_loading_bar"
+            android:layout_height="42dp"
+            android:layout_width="42dp"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/tv_error_message"
+            android:text="@string/error_message"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
+</layout>
