--- a/app/src/main/res/layout/activity_movie_catalog.xml
+++ b/app/src/main/res/layout/activity_movie_catalog.xml
@@ -12,7 +12,7 @@
             android:id="@+id/rv_movie_catalog"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.mustafakahraman.popularmovies1.MoviesCatalog">
+            tools:context="com.mustafakahraman.popularmovies1.ui.MoviesCatalog">
         </android.support.v7.widget.RecyclerView>
 
         <ProgressBar
