--- a/app/src/main/res/menu/menu_catalog.xml
+++ b/app/src/main/res/menu/menu_catalog.xml
@@ -9,9 +9,15 @@
         app:showAsAction="never" />
 
     <item
-        android:title="@string/menu_title_toprated"
-        android:id="@+id/menu_item_toprated"
-        android:orderInCategory="2"
+    android:title="@string/menu_title_toprated"
+    android:id="@+id/menu_item_toprated"
+    android:orderInCategory="2"
+    app:showAsAction="never" />
+
+    <item
+        android:title="@string/menu_title_favorite"
+        android:id="@+id/menu_item_favorite"
+        android:orderInCategory="3"
         app:showAsAction="never" />
 
 </menu>
