--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -53,6 +53,7 @@
 
         </FrameLayout>
 
+
         <RatingBar
             android:id="@+id/rb_voteavg"
             style="@style/Widget.AppCompat.RatingBar.Small"
@@ -63,11 +64,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:isIndicator="true"
-            android:max="10"
             android:numStars="10"
-            android:stepSize="0.1"
+            android:stepSize="0.25"
             app:layout_constraintBottom_toBottomOf="@+id/fl_poster_container"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/fl_poster_container"
             app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
